// protos/issuer.proto
syntax = "proto3";

option go_package = "ssi-book/protos";

package issuer;

service SimpleIssuer {
  rpc IssueSimpleVC (MsgRequestVC) returns (MsgResponseVC) {}
  rpc IssueIDVC (MsgRequestIDVC) returns (MsgResponseVC) {}
}

message MsgRequestVC {
  string did = 1;
  string vp = 2;
}

message MsgResponseVC {
  string result = 1;
  string msg = 2;
  string vc = 3;
}

message MsgRequestIDVC {
  string did = 1;
  string name = 2;
  string mobile = 3;
  string birthDate = 4;
  string gender = 5;
}

